<!--22 Mei 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<resources>
    <string name="app_name">My Self App</string>
    <string name="ellipse">Ellipse</string>
    <string name="logo_image">Logo Image</string>
    <string name="on_boarding_one">All About Me</string>
    <string name="on_boarding_one_desc">You can find out all about me through \nthis application to know more</string>
    <string name="on_boarding_one_illustration">On Boarding One Illustration</string>
    <string name="on_boarding_two_illustration">On Boarding Two Illustration</string>
    <string name="skip">Skip</string>
    <string name="on_boarding_two">Daily Activity</string>
    <string name="on_boarding_two_desc">You can find out all my daily activities \nthrough this application</string>
    <string name="on_boarding_three">Gallery and Media</string>
    <string name="on_boarding_three_desc">You can see some of my favorite photos, \nsongs and videos through this application.</string>
    <string name="lest_go">Lest Go!</string>
    <string name="home">Home</string>
    <string name="daily">Daily</string>
    <string name="gallery">Gallery</string>
    <string name="media">Media</string>
    <string name="profile">Profile</string>
    <string name="image_profile_home">Image Profile Home</string>
    <string name="profile_name">Muhammad Jafar Shidik</string>
    <string name="profile_role">Computer Science Student</string>
    <string name="about_me">About Me</string>
    <string name="image_hobby">Image Hobby</string>
    <string name="my_hobby">My Hobby</string>
    <string name="playing_music">Playing Music</string>
    <string name="image_food">Image Food</string>
    <string name="favorite_food">Favorite Food</string>
    <string name="all_halal_food">All Halal Food</string>
    <string name="image_drink">Image drink</string>
    <string name="favorite_drink">Favorite Drink</string>
    <string name="mineral_water">Mineral water</string>
    <string name="image_interest">Image Interest</string>
    <string name="interest">Interest</string>
    <string name="programming">Programming</string>
    <string name="image_goals">Image Goals</string>
    <string name="future_goals">Future goals</string>
    <string name="i_want_to_be_a_software_engineer">I want to be a software engineer</string>
    <string name="friend_list_name">Muhammad Jafar Shidik</string>
    <string name="image_friends">Image Friends</string>
    <string name="my_friends_list">My friends list</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="image_daily_activity">Image Daily Activity</string>
    <string name="wake_up_early">Wake up early</string>
    <string name="time">04.30</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_desc">Hi, I am a Computer Science student at the Indonesian Computer University. I am very interested in learning android application development and UI Design.</string>
    <string name="icon_telephone">Icon Telephone</string>
    <string name="icon_email">Icon Email</string>
    <string name="icon_linkedin">Icon LinkedIn</string>
    <string name="icon_github">Icon Github</string>
    <string name="icon_instagram">Icon Instagram</string>
    <string name="find_me">Find Me</string>
    <string name="about_app">About App</string>
    <string name="about_application">About Application</string>
    <string name="icon_info">Icon Info</string>
    <string name="version_app">App Version : 1.0 \nCurrent Version : 0.9 \nDevelop By : \nMuhammad Jafar Shidik</string>
    <string name="close">Close</string>
    <string name="video">Video</string>
    <string name="favorite_music">Favorite Music</string>
    <string name="my_gallery">My Gallery</string>
    <string name="title_video">Title VIdeo</string>
    <string name="desc_video">Desc Video</string>
    <string name="intro">Let me introduce myself</string>
    <string name="hello">Hello!</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYmVubm9hbGlmIiwiYSI6ImNrYnJyanZseDE4aW8ydWp6M3VvZHR6aXoifQ.IBqQxxGN8T-7SrY32AVoLQ</string>
    <string name="maps">Maps</string>
    <string name="gallery_item">Gallery Item</string>
    <string name="about_me_desc">A glimpse of things about me</string>
    <string name="my_friend_list_desc">Here is my friend list data</string>
    <string name="daily_activities_desc">Here are my daily activities</string>
    <string name="my_gallery_desc">Here are my photos in the gallery</string>
    <string name="video_desc">Here are my favorite videos</string>
    <string name="fav_music_desc">Here are my favorite music that I listen to often</string>
    <string name="my_profile_desc">Contact me and let\'s get connected</string>
    <string name="find_me_desc">Here is the location where I live now</string>
    <string name="title_music">Untuk apa / Untuk apa?</string>
    <string name="music_singer">Hindia</string>
</resources>