<?xml version="1.0" encoding="utf-8"?>
<!--22 Mei 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/dailyFragment"
        android:icon="@drawable/ic_schedule"
        android:title="@string/daily" />
    <item
        android:id="@+id/galleryFragment"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/mediaFragment"
        android:icon="@drawable/ic_media"
        android:title="@string/media" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>