<?xml version="1.0" encoding="utf-8"?>
<!--22 Mei 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvVersionDialog"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@string/icon_info"
            android:src="@drawable/ic_info" />

        <TextView
            style="@style/TextPauaSemiBold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_application" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/TextPauaRegular16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:text="@string/version_app"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClose"
        style="@style/ButtonPrimaryLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>