<?xml version="1.0" encoding="utf-8"?>
<!--22 Mei 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:textAlignment="center"
    tools:context=".ui.main.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleProfile"
            style="@style/TextPauaSemiBold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/my_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMyProfile"
            style="@style/backgroundPaua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMyProfileDesc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/profile_foto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvProfileName"
                    style="@style/TextWhiteSemiBold18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_name"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.478"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/tvProfileDesc"
                    style="@style/TextLinkWaterRegular12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/profile_desc"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />

                <ImageView
                    android:id="@+id/ivProfileTelephone"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:contentDescription="@string/icon_telephone"
                    android:src="@drawable/ic_phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivEmail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileDesc" />

                <ImageView
                    android:id="@+id/ivEmail"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/icon_email"
                    android:src="@drawable/ic_email"
                    app:layout_constraintEnd_toStartOf="@+id/ivLinkedIn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivProfileTelephone"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileDesc" />

                <ImageView
                    android:id="@+id/ivLinkedIn"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/icon_linkedin"
                    android:src="@drawable/ic_linkedin"
                    app:layout_constraintEnd_toStartOf="@+id/ivGithub"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivEmail"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileDesc" />

                <ImageView
                    android:id="@+id/ivGithub"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/icon_github"
                    android:src="@drawable/ic_github"
                    app:layout_constraintEnd_toStartOf="@+id/ivInstagram"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivLinkedIn"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileDesc" />

                <ImageView
                    android:id="@+id/ivInstagram"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/icon_instagram"
                    android:src="@drawable/ic_instagram"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivGithub"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileDesc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitleFindMe"
            style="@style/TextPauaSemiBold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/find_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvMyProfile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAlertDialog"
            style="@style/ButtonSecondaryLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/about_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="@dimen/_240sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescFindMe">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.mapbox.maps.MapView xmlns:mapbox="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/mvFindMe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    mapbox:mapbox_cameraTargetLat="-6.878968125445695"
                    mapbox:mapbox_cameraTargetLng="107.61591239816846"
                    mapbox:mapbox_cameraZoom="14.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMyProfileDesc"
            style="@style/TextPauaRegular12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/my_profile_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleProfile" />

        <TextView
            android:id="@+id/tvDescFindMe"
            style="@style/TextPauaRegular12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/find_me_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleFindMe" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>