<?xml version="1.0" encoding="utf-8"?>
<!--22 Mei 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.on_boarding.fragments.OnBoardingThreeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginBottom="-25dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextPauaSemiBold18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/on_boarding_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDesc"
                style="@style/TextShipCoveRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/on_boarding_three_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                style="@style/ButtonPrimaryLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="48dp"
                android:text="@string/lest_go"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivIllustration1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/on_boarding_one_illustration"
        android:src="@drawable/ic_gallery_and_media"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>